--- a/style.css
+++ b/style.css
@@ -1,105 +1,420 @@
-:root {
-    --div-bg: #16294e;
-    --body-bg-clr: #ebebeb;
-    --nav-clr: #0fcb0f;
-    --success: #0fa10f;
-    --danger: #c20c0c;
-    --success-hover: #47ae47;
-    --danger-hover:  #a54848;
-    --hover-clr: #666666;
+.projects, .contact {
+    display: none;
 }
 
+.projects, .contact{
+    margin-top: -10rem;
+}
+.about-link {
+    color: #00abf0;
+}
 * {
     margin: 0;
     padding: 0;
-    color: var(--body-bg-clr);
-    font-size: 3vmin;
-    font-family:'Poppins';
     box-sizing: border-box;
+    text-decoration: none;
     outline: none;
+    border: none;
+    color: #f8f8f8;
     scroll-snap-align: smooth;
+    font-family: 'Poppins';
 }
 body {
-    background-color: var(--body-bg-clr);
-    position: relative;
+    background-color: #263042;
 }
 
-/* nav bar styling */
-.navbar {
-    position:relative;
-    display: flex;
-    height: 8vh;
-    align-items: center;
-    text-align: center;
-    justify-content: space-between;
+html {
+    font-size: 62.5%;
+}
+
+p {
+    font-size: 1.6rem;
+}
+
+main {
+    min-height: 100vh;
+    width: 85%;
+    margin: auto auto;
+    padding: 10rem 15rem 0 15rem;
+    z-index: 100;
+}
+
+/* ================= all heading ================= */
+.heading {
+    font-size: 4rem;
+    margin-top: 4rem;
+}
+
+.line {
+    margin: auto auto;
+    margin-top: -4.5rem;
+    margin-bottom: 4rem;
+    width: 10rem;
+    height: 0.01rem;
+    background-color: #00abf0;
+}
+
+/* ================= nav bar ================= */
+nav {
+    position:sticky;
+    height: 7rem;
     width: 100%;
-    padding: 0.8rem;
-    background-color: var(--nav-clr);
-}
-.navbar .logo {
-    margin-left: 2rem;
-}
-.navbar .logo .logo-txt {
-    text-decoration: none;
-    font-weight: bold;
-    color: var(--body-bg-clr);
-    transition: 0.2s ease;
-    font-family: cursive;
-}
-ul {
-    display: inline-flex;
-    margin-right: 2rem;
-}
-li {
-    font-weight: 600;
-    color: var(--body-bg-clr);
-    margin: 1rem;
-    font-size: 2.7vmin;
-    list-style: none;
-    cursor: pointer;
-    transition: 0.2s ease;
-}
-li:hover, .navbar .logo .logo-txt:hover {
-    color: var(--hover-clr);
-}
-.welcome {
-    margin-top: 3rem;
-    align-items: center;
-    text-align: center;
-}
-.welcome h1 {
-    color: var(--div-bg);
-    margin: 1rem auto;
-    font-size: 2rem;
+    background-color: #263042;
+    z-index: 100000;
 }
 
-/* main body styling  */
-.container1, .container2 {
-    background-color: var(--div-bg);
-    border-radius: 5px;
-    padding: 5px;
-    margin: 50px auto;
-    margin-bottom: 5rem;
-    width: 28rem;
+
+.logo {
+    width: 4rem;
+    height: 3rem;
+    margin: 2.5rem 0 0 10rem;
+    cursor: pointer;
+}
+
+nav ul {
+    float: right;
+    margin: 3rem 5rem auto auto;
+    justify-content: center;
     align-items: center;
     text-align: center;
+    font-weight: bold;
 }
-.container2 {
+
+.nav-link {
+    position: relative;
+    display: inline-block;
+    height: 3rem;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    margin: 1px 2rem;
+    z-index: 1;
+    overflow: hidden;
+}
+.nav-link::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 0.2rem;
+    border-radius: 1rem;
+    background-color: #0d8fc2;
+    transition: 0.5s;
+}
+.nav-link:hover::before {
+    width: 100%;
+}
+.nav-link:hover {
+    cursor: pointer;
+}
+
+
+#menu-icon {
+    font-size: 3.6rem;
+    line-height: 7rem;
+    margin-right: 2rem;
+    float: right;
     display: none;
 }
-hr {
-    width: 50%;
-    margin: 0 auto;
+
+#exit-icon {
+    position: relative;
+    margin-top: -13rem;
+    font-size: 3.6rem;
+    line-height: 7rem;
+    margin-right: 2rem;
+    float: right;
+    display: none;
+}
+
+/* =================  Home section ================= */
+.home {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.main-home {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-wrap: wrap;
+    padding: 1rem auto;
+    gap: 2rem;
+}
+
+.main-home img {
+    width: 25rem;
+    height: 25rem;
+    border-radius: 50%;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    border: 0.3rem solid #00abf0;
+}
+.main-home h1 {
+    font-size: 6rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.main-home .wmu {
+    font-size: 2.5rem;
+    justify-content:center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 3rem;
 }
 span {
-    color: var(--nav-clr);
-    font-size: 2rem;
-    font-family: cursive;
+    color:  #00abf0;
+    font-weight: 600;
 }
-.calc-title {
+.about-me {
+    font-size: 3rem;
+    cursor: pointer;
+    border-radius: 1rem;
+}
+.about-btn {
+    margin: 0rem auto;
+    margin-bottom: 5rem;
+}
+.intro-bio {
+    line-height: 3.5rem;
+    font-weight: 100;
+    margin: 0 auto;
+    width: 85%;
+    text-align: justify;
+    align-items: center;
+    padding: 1rem auto;
+    color: #e8e8e8;
+}
+
+.social-media, .resume {
+    width: 100%;
+    margin-top: 3rem;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.social-media a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: .2rem solid #a3a3a3;
+    border-radius: 50%;
     font-size: 2rem;
+    margin: 0rem 1.5rem 1rem 0;
+    transition: width 0.5s, height 0.5s, transform 0.5s ease;
+}
+
+.social-media a:hover {
+    background-color: #00abf0;
+    transform: scale(1.05);
+}
+
+
+.btn, .main-intro .download {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.2rem;
+    margin-top: 3rem;
+    width: auto;
+    font-size: 1.5rem;
+    color: #f8f8f8;
+    border-radius: 0.5rem;
+    background-color: #00abf0;
+    z-index: 1;
+    overflow: hidden;
+}
+.main-intro .download::before, .btn::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+    z-index: -1;
+}
+.main-intro .download:hover::before, .btn:hover::before{
+    background-color: #00cf61;
+}
+
+/* ================= skills section styling ================= */
+.skills h1, .projects h1, .contact h1 {
+    padding-top: 4rem;
+    margin-bottom: 5rem;
+    padding: 1rem auto;
+}
+
+.skill, .c-icon {
+    display: inline-block;
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    font-size: 5rem;
+    transition: 0.5s ease;
+}
+
+.row {
+    margin: auto auto;
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.col {
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    margin: 0.5rem 1rem;
+    padding: 15px;
+    width: 14rem;
+    height: 13rem;
+    border: 0.2rem solid #5467858d;
+    border-radius: 0.5rem;
+    background-color: #2d38498d;
+    cursor: pointer;
+    transition: width 0.5s, height 0.5s, transform 0.5s ease;
+}
+
+.col::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+    z-index: -1;
+}
+
+.col:hover::before {
+    background-color: #42536c8d;
+    transform:scale(0.8);
+}
+.col h1 {
+    margin-top: -3rem;
+}
+
+/* ================= projects section styling =================  */
+
+.proj-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.proj-container .proj-box {
+    width: 33rem;
+    background-color: #2d38498d;
+    border-radius: 0.5rem;
+    text-align: center;
+    border: 0.2rem solid #5467858d;
+}
+
+.proj-box img {
+    width: 30rem;
+    height: 20rem;
+    border-radius: 0.5rem;
+    margin-bottom: -5rem;
+    margin-top: 1.4rem;
+}
+
+.proj-box h1 {
+    font-size: 3rem;
+    width: 90%;
+    margin: 1.5rem auto;
+    text-align: left;
+}
+
+.proj-box p {
+    width: 90%;
+    font-size: 1.6rem;
     margin: 1rem auto;
-    margin-bottom: 0;
+    text-align: left;
+}
+
+.langs {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 2rem;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.langs h3 {
+    width: 8rem;
+    padding: 1.5rem 0 1.5rem 0;
+    background-color:#00abf0;
+    margin: 1rem 1rem;
+    border-radius: 0.5rem;
+}
+
+/* ================= contact section styling ================= */
+.contact .contact-title {
+    margin-top: 5rem;
+}
+.row .contact-col {
+    margin: 5px 10px;
+    padding: 2rem;
+    max-width: 25rem;
+    min-width: 23rem;
+    height: 150px;
+    border: 0.2rem solid #5467858d;
+    border-radius: 0.5rem;
+    background-color: #2d38498d;
+    transition: 0.5s;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    margin: 0.5rem 1rem;
+}
+.row .contact-col::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+    z-index: -1;
+}
+.row .contact-col:hover::before {
+    background-color: #42536c8d;
+    transform:scale(0.9);
+}
+#msg-disp {
+    margin-bottom: 2rem;
+}
+
+.contact-col h1 {
+    margin-top: -2.7rem;
+    transform: scale(1.02);
+}
+.data-col {
+    gap: 25px;
+    margin-bottom: 0rem;
+}
+.input-col {
+    width: 27rem;
+    position: relative;
 }
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
@@ -107,221 +422,308 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
     transition: all 5000s ease-in-out 0s;
 }
-
-.sec {
-    display: block;
-}
-.row {
-    margin: 1rem auto;  
-    display: block;
-}
-
-.col {
-    width: 90%;
-    margin: 0rem auto; 
-}
 .inputBox {
     position: relative;
 }
-.data {
-    width: 15rem;
-    margin: 0.5rem auto;
-    padding-left: 0.5rem;
-    border: 1px solid var(--body-bg-clr);
-    background-color: transparent;
-    border-radius: 5px;
+.txt-area {
+    height: 17.3rem;
+    resize: none;
+    padding: 2rem;
+}
+.data, .txt-area {
+    padding: 10px;
+    width: 100%;
+    max-width: 300px;
+    margin: 1rem auto;
+    box-sizing: border-box;
     outline: none;
-    transition: 0.5s ease;
+    color: #fff;
+    font-size: 1.4rem;
+    border-radius: 0.5rem;
+    border: 0.2rem solid #5467858d;
+    background-color: #263042;
+    transition: width 0.5s, height 0.5s, transform 0.5s ease;
 }
-
-.col label {
+.inputBox label {
+    font-size: 1.4rem;
     position: absolute;
-    left: 5.15rem;
-    font-size: 0.9rem;
-    top: 0.6rem;
-    background-color: var(--div-bg);
+    left: 12px;
+    top: 20px;
     transition: 0.2s;
+    color: #fff;
+    background-color: #263042;
     pointer-events: none;
-
-}
-.inputBox input:valid ~ label, .inputBox input:focus ~ label {
-    top: -0.5rem;
-    left: 5.1rem;
-    padding-left: 0.09rem;
-    padding-right: 0.2rem;
-}
-#last-sec {
-    bottom: 29rem;
 }
 
-/* btns styling */
-.calc {
-    font-size: 0.9rem;
-    border-radius: 5px;
-    margin-top: 3px auto;
-    width: 20%;
-    border-style: none;
-    width: 6rem;
-    transition: 0.2s ease-in-out;
-}
-.cal1 {
-    background-color: var(--success);
-}
-.clr {
-    background-color: var(--danger)
-}
-.cal1:hover {
-    background-color: var(--success-hover);
-}
-.clr:hover {
-    background-color: var(--danger-hover);
+.inputBox input:valid ~ label, .inputBox input:focus ~ label,
+.inputBox textarea:valid ~ label, .inputBox textarea:focus ~ label {
+    top: -2px;
+    left: 7px;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
-#btns {
-    width: 13rem;
-    margin-top: 1rem;
-    display: inline-flex;
+.main-row {
+    padding-bottom: 3rem auto;
 }
 
-.each-btn {
-    margin: 0 auto ;
-}
-
-
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
 
 /* ========== footer section styling ========= */
 .footer {
     width: 100%;
-    bottom: 0;
-    text-align: center;
-    background-color: var(--div-bg);
-}
-
-
-.footer .social-media {
-    width: 12rem;
-    margin: 0 auto;
-    display: flex;
-    display: inline-flex;
+    align-items: center;
     justify-content: center;
+    text-align: center;
+    margin-top: 5rem;
+    padding-bottom: 2rem;
+    bottom: 0;
 }
-footer .social-media a .bx {
-    color: var(--body-bg-clr)
+
+.footer .footer-social-media {
+    justify-content: center;
+    align-items: center;
+    width: 65%;
+    margin: 2rem auto 0 auto;
+    padding-left: 1.3rem;
 }
-footer .social-media a {
+
+.footer .footer-social-media a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
     width: 40px;
     height: 40px;
-    border-radius: 50%;
-    margin:33px 5px;
-    text-decoration: none;
     background: transparent;
-    border: .1rem solid var(--body-bg-clr);
+    border: .2rem solid #a3a3a3;
+    border-radius: 50%;
+    font-size: 2rem;
+    margin: 0rem 1.5rem 1rem 0;
     transition: width 0.5s, height 0.5s, transform 0.5s ease;
 }
 
-footer .social-media a:hover {
-    background-color: var(--hover-clr);
+.footer-social-media a:hover {
+    background-color: #00abf0;
     transform: scale(1.05);
 }
 
-/*  ==========================================================================================
-                                        loader styling
-    ========================================================================================== */
-
-
-.loader {
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  position: fixed;
-  background-color: var(--body-bg-clr);
-  justify-content: center;
-  align-items: center;
-  transition: opacity 0.75s, visibility 0.75s;
-}
-
-.loader-hidden {
-  opacity: 0;
-  visibility: hidden;
-}
-
-.loader::after {
-  content: "";
-  height: 25px;
-  width: 25px;
-  border: 3px solid #131212;
-  border-top: 3px solid transparent;
-  border-radius: 50%;
-  -webkit-animation: spin 0.75 linear infinite;
-  animation: spin 0.75s linear infinite;
-
-}
-@keyframes spin {
-  from {transform: rotate(0deg);}
-  to {transform: rotate(360deg);}
-}
-
-/* for safari */
-@-webkit-keyframes spin {
-  from {transform: rotate(0deg);}
-  to {transform: rotate(360deg);}
-}
-
-/* ==========Responsive styling========= */
-  
+/* ##################################### */
+/* ---------responsive styling---------- */
+/* ##################################### */
 @media (max-width: 1200px) {
-    .footer {
+    .row .contact-col {
+        max-width: 33rem;
+        min-width: 33rem;
     }
 }
 
 @media (max-width: 1024px) {
-    .container1, .container2{
-        margin-bottom: 7rem;
+    label.logo {
+        font-size: 30px;
+        padding-left: 50px;
     }
-    .footer {
-        position: fixed;
-        bottom: 0;
+    .logo {
+        width: 3rem;
+        height: 2.2rem;
+        margin: 2.1rem 0 0 3rem;
+    }
+    nav ul li a {
+        font-size: 16px;
+    }
+
+    main {
+        width: 80%;
+        margin: 0 auto;
+        padding: 10rem 2rem;
+    }
+
+    .main-home img {
+        margin-top: -5rem;
+    }
+    .main-home h1 {
+        font-size: 3.5rem;
+        font-weight: 500;
+        letter-spacing: 0.1rem;
+    }
+    
+    .main-home .wmu {
+        font-size: 2rem;
+    }    
+    .intro-bio {
+        padding: .8rem .8rem;
+    }
+
+    .projects h1 {
+        padding-top: 2rem;
+    }
+    .row .contact-col {
+        width: 30rem;
+    }
+    .row .contact-col h1 {
+        font-size: 2rem;
+    }
+    .main-row {
+        margin-bottom: -3rem;
     }
 }
 
 @media (max-width: 952px) {
-    .footer {
+    label.logo {
+        font-size: 30px;
+        padding-left: 50px;
     }
-}
+    .logo {
+        width: 3rem;
+        height: 2.2rem;
+        margin: 2.1rem 0 0 3rem;
+    }
+    nav ul li a {
+        font-size: 16px;
+    }
 
-@media (max-width: 840px) {
-    .container1{
-        margin-bottom: 9rem;
+    main {
+        width: 80%;
+        margin: 0 auto;
+        padding: 10rem 2rem;
     }
-    .footer {
-        position: fixed;
-        bottom: 0;
+
+    .main-home img {
+        margin-top: -5rem;
+    }
+    .main-home h1 {
+        font-size: 3.5rem;
+        font-weight: 500;
+        letter-spacing: 0.1rem;
+    }
+    
+    .main-home .wmu {
+        font-size: 2rem;
+    }    
+    .intro-bio {
+        padding: .8rem .8rem;
+    }
+
+    .projects h1 {
+        padding-top: 2rem;
+    }
+    .main-row {
+        margin-bottom: -3rem;
     }
 }
 
 
 @media (max-width: 768px) {
-    .container1, .container2{
-        margin-bottom: 12rem;
+    #menu-icon, #exit-icon {
+        display: block;
     }
-
-    .footer {
+    .nav-menu {
         position: fixed;
-        bottom: 0;
+        width: 100%;
+        height: 110%;
+        background-color: #263042;
+        top: -5rem; 
+        left: 0;
+        text-align: center;
+        padding-top: 15rem;
+        transition: all .3s ease;
+        display: none;
+        transition: all 1s ease-in-out;
+    }
+    .nav-menu.active {
+        display: block;
+     }
+     .nav-menu li {
+        display: block;
+        margin: 5rem auto;
+     }
+     .nav-link:hover::before {
+        width: 0;
+    }
+     .nav-link.hover, .nav-link.active {
+        color:#00abf0;
+     }
+
+     .row .contact-col {
+        width: 33rem;
+    }
+    .input-col {
+        width: 33rem;
+        position: relative;
+    }
+    .data, .txt-area {
+        max-width: 33rem;
+    }
+    .btn {
+        margin-top: 0.2rem;
+        width: 33rem;
+    }
+     .footer .footer-social-media {
+        margin: 2rem auto 0 auto;
     }
 }
 /* -----------for cell phones----------- */
-@media only screen and (max-width: 480px) {
-    .footer {
-        position: fixed;
-        bottom: 0;
+@media (max-width: 480px) {
+    main {
+        width: 100%;
+        margin: 0 auto;
+        padding: 10rem 2rem;
     }
-  }
+    .logo {
+        width: 3rem;
+        height: 2.2rem;
+        margin: 2.1rem 0 0 3rem;
+    }
+    #menu-icon {
+        margin-right: 2.5rem;
+    }
+
+    .main-home img {
+        margin-top: -5rem;
+    }
+    .main-home h1 {
+        font-size: 3.5rem;
+        font-weight: 500;
+        letter-spacing: 0.1rem;
+    }
+    
+    .main-home .wmu {
+        font-size: 1.6rem;
+    }
+    .intro-bio {
+        padding: .8rem .8rem;
+    }
+
+    .projects h1 {
+        padding-top: 4rem;
+    }
+ 
+    .row .contact-col {
+        max-width: 33rem;
+        min-width: 33rem;
+    }
+    .input-col {
+        width: 33rem;
+        position: relative;
+    }
+    .data, .txt-area {
+        max-width: 33rem;
+    }
+    .btn {
+        margin-top: 0.2rem;
+        width: 33rem;
+    }
+    .main-row {
+        margin-bottom: -3rem;
+    }
+
+    .data:hover, .txt-area:hover, .btn:hover {
+        transform: scale(1);
+    }
+
+    .footer {
+        margin-top: -2rem;
+        padding-bottom: 1rem;
+    }
+    .footer .footer-social-media {
+        margin: 0 auto;
+    }
+}
