--- a/style.css
+++ b/style.css
@@ -20,7 +20,12 @@
     font-family: 'Poppins';
 }
 body {
-    background-color: #263042;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    background-size: cover;
+    /* background-color: #263042; */
+    background: linear-gradient(to bottom, #131720, #003b52, #00222f);
 }
 
 html {
@@ -31,19 +36,8 @@ p {
     font-size: 1.6rem;
 }
 
-main {
-    min-height: 100vh;
-    width: 85%;
-    margin: auto auto;
-    padding: 10rem 15rem 0 15rem;
-    z-index: 100;
-}
-
 /* ================= all heading ================= */
-.heading {
-    font-size: 4rem;
-    margin-top: 4rem;
-}
+
 
 .line {
     margin: auto auto;
@@ -59,7 +53,7 @@ nav {
     position:sticky;
     height: 7rem;
     width: 100%;
-    background-color: #263042;
+    background-color: transparent;
     z-index: 100000;
 }
 
@@ -129,24 +123,34 @@ nav ul {
 
 /* =================  Home section ================= */
 .home {
-    display: block;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    height: 80%;
+    overflow-y: auto;
+    width: 60%;
+    margin: auto;
+    margin-bottom: 4rem; /* margin can be changed */
+    padding: 10rem 7rem;
+    z-index: 100;
+    border-radius: 10px;
+    box-shadow: 5px 10px 15px #131720;
+    background: linear-gradient(to bottom, #131720, #003347, #00222f);
 }
 
+::-webkit-scrollbar { /* hide the scroll-bar */
+    display: none;
+}
+
+.main-intro {
+    width: 100%;
+}
 .main-home {
     justify-content: center;
     align-items: center;
     text-align: center;
-    flex-wrap: wrap;
-    padding: 1rem auto;
-    gap: 2rem;
 }
 
 .main-home img {
-    width: 25rem;
-    height: 25rem;
+    width: 22rem;
+    height: 22rem;
     border-radius: 50%;
     margin-top: 3rem;
     margin-bottom: 2rem;
@@ -177,91 +181,50 @@ span {
     cursor: pointer;
     border-radius: 1rem;
 }
-.about-btn {
-    margin: 0rem auto;
-    margin-bottom: 5rem;
-}
+
 .intro-bio {
     line-height: 3.5rem;
     font-weight: 100;
-    margin: 0 auto;
-    width: 85%;
+    margin: 5.5rem auto 1rem auto;
     text-align: justify;
     align-items: center;
     padding: 1rem auto;
     color: #e8e8e8;
 }
 
-.social-media, .resume {
-    width: 100%;
-    margin-top: 3rem;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-
-
-.social-media a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    background: transparent;
-    border: .2rem solid #a3a3a3;
-    border-radius: 50%;
-    font-size: 2rem;
-    margin: 0rem 1.5rem 1rem 0;
-    transition: width 0.5s, height 0.5s, transform 0.5s ease;
-}
-
-.social-media a:hover {
-    background-color: #00abf0;
-    transform: scale(1.05);
-}
-
-
-.btn, .main-intro .download {
+.btn {
     position: relative;
     display: inline-flex;
     justify-content: center;
     align-items: center;
     padding: 1.2rem;
-    margin-top: 3rem;
+    margin: 3rem auto;
     width: auto;
     font-size: 1.5rem;
-    color: #f8f8f8;
     border-radius: 0.5rem;
     background-color: #00abf0;
-    z-index: 1;
-    overflow: hidden;
-}
-.main-intro .download::before, .btn::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    transition: 0.5s;
-    z-index: -1;
-}
-.main-intro .download:hover, .btn:hover{
-    background-color: #00cf61;
 }
 
+.btn:hover{
+    background-color: #00cf61;
+}
 /* ================= skills section styling ================= */
 .skills h1, .projects h1, .contact h1 {
     padding-top: 4rem;
     margin-bottom: 5rem;
     padding: 1rem auto;
+    text-align: center;
 }
-
-.skill, .c-icon {
-    display: inline-block;
+#headings {
+    font-size: 5rem;
+    text-align: center;
+}
+.icons {
+    text-align: center;
+}
+.icons i {
     width: 6rem;
     height: 6rem;
-    border-radius: 50%;
     font-size: 5rem;
     transition: 0.5s ease;
 }
@@ -277,6 +240,7 @@ span {
 }
 
 .col {
+    display: inline-block;
     position: relative;
     z-index: 1;
     overflow: hidden;
@@ -286,7 +250,7 @@ span {
     height: 13rem;
     border: 0.2rem solid #5467858d;
     border-radius: 0.5rem;
-    background-color: #2d38498d;
+    background-color: transparent;
     cursor: pointer;
     transition: width 0.5s, height 0.5s, transform 0.5s ease;
 }
@@ -294,6 +258,7 @@ span {
 .col::before {
     content: "";
     position: absolute;
+    border-radius: 0.5rem;
     left: 0;
     top: 0;
     width: 100%;
@@ -303,7 +268,7 @@ span {
 }
 
 .col:hover::before {
-    background-color: #42536c8d;
+    background: linear-gradient(to bottom, #131720, #003b52, #00222f);
     transform:scale(0.8);
 }
 .col h1 {
@@ -311,7 +276,6 @@ span {
 }
 
 /* ================= projects section styling =================  */
-
 .proj-container {
     display: flex;
     justify-content: center;
@@ -322,7 +286,7 @@ span {
 
 .proj-container .proj-box {
     width: 33rem;
-    background-color: #2d38498d;
+    background: linear-gradient(to bottom, #131720, #003b52, #00222f);
     border-radius: 0.5rem;
     text-align: center;
     border: 0.2rem solid #5467858d;
@@ -362,24 +326,27 @@ span {
 .langs h3 {
     width: 8rem;
     padding: 1.5rem 0 1.5rem 0;
-    background-color:#00abf0;
+    background: linear-gradient(to bottom, #131720, #003b52, #00222f);
     margin: 1rem 1rem;
     border-radius: 0.5rem;
 }
 
 /* ================= contact section styling ================= */
+.contact {
+    width: 100%;
+    text-align: center;
+}
 .contact .contact-title {
     margin-top: 5rem;
 }
 .row .contact-col {
-    margin: 5px 10px;
-    padding: 2rem;
-    max-width: 25rem;
-    min-width: 23rem;
-    height: 150px;
+    margin: 5px auto; 
+    padding: 2rem; 
+    width: 22rem;
+    height: 130px;
     border: 0.2rem solid #5467858d;
     border-radius: 0.5rem;
-    background-color: #2d38498d;
+    background-color: transparent;
     transition: 0.5s;
     position: relative;
     z-index: 1;
@@ -389,6 +356,7 @@ span {
 .row .contact-col::before {
     content: "";
     position: absolute;
+    border-radius: 0.5rem;
     left: 0;
     top: 0;
     width: 100%;
@@ -397,7 +365,7 @@ span {
     z-index: -1;
 }
 .row .contact-col:hover::before {
-    background-color: #42536c8d;
+    background: linear-gradient(to bottom, #131720, #003b52, #00222f);
     transform:scale(0.9);
 }
 #msg-disp {
@@ -405,114 +373,113 @@ span {
 }
 
 .contact-col h1 {
+    font-size: 1.5rem;
     margin-top: -2.7rem;
     transform: scale(1.02);
 }
-.data-col {
-    gap: 25px;
-    margin-bottom: 0rem;
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: #f8f8f8;
+}
+
+/* the input fields */
+#input-col {
+    display: block;
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin: 10px auto;
+    margin-bottom: -3rem;
 }
 .input-col {
-    width: 27rem;
-    position: relative;
+    display: block;
 }
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-    transition: all 5000s ease-in-out 0s;
-}
-.inputBox {
-    position: relative;
-}
-.txt-area {
-    height: 17.3rem;
-    resize: none;
-    padding: 2rem;
-}
+
 .data, .txt-area {
     padding: 10px;
-    width: 100%;
-    max-width: 300px;
-    margin: 1rem auto;
+    width: 65%;
+    margin: 0.7rem auto;
     box-sizing: border-box;
     outline: none;
-    color: #fff;
+    color: #f8f8f8;
     font-size: 1.4rem;
     border-radius: 0.5rem;
     border: 0.2rem solid #5467858d;
-    background-color: #263042;
+    background-color: transparent;
     transition: width 0.5s, height 0.5s, transform 0.5s ease;
 }
-.inputBox label {
-    font-size: 1.4rem;
-    position: absolute;
-    left: 12px;
-    top: 20px;
-    transition: 0.2s;
-    color: #fff;
-    background-color: #263042;
-    pointer-events: none;
+.txt-area {
+    height: 13rem;
+    resize: none;
 }
-
-.inputBox input:valid ~ label, .inputBox input:focus ~ label,
-.inputBox textarea:valid ~ label, .inputBox textarea:focus ~ label {
-    top: -2px;
-    left: 7px;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-}
-
-.main-row {
-    padding-bottom: 3rem auto;
-}
-
-
-/* ========== footer section styling ========= */
-.footer {
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-top: 5rem;
-    padding-bottom: 2rem;
-    bottom: 0;
-}
-
-.footer .footer-social-media {
-    justify-content: center;
-    align-items: center;
-    width: 65%;
-    margin: 2rem auto 0 auto;
-    padding-left: 1.3rem;
-}
-
-.footer .footer-social-media a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    background: transparent;
-    border: .2rem solid #a3a3a3;
-    border-radius: 50%;
-    font-size: 2rem;
-    margin: 0rem 1.5rem 1rem 0;
-    transition: width 0.5s, height 0.5s, transform 0.5s ease;
-}
-
-.footer-social-media a:hover {
-    background-color: #00abf0;
-    transform: scale(1.05);
-}
-
 /* ##################################### */
 /* ---------responsive styling---------- */
 /* ##################################### */
-@media (max-width: 1200px) {
-    .row .contact-col {
-        max-width: 33rem;
-        min-width: 33rem;
+@media (max-width: 1280px) {
+    .home {
+        height: 80%;
+        margin-top: 3rem;
+        width: 80%;
+        padding: 7rem 1rem;
+    }
+    .main-home h1 {
+        font-size: 6rem;
+        font-weight: 500;
+    }
+    .main-home .wmu {
+        font-size: 3rem;
+    }
+    .main-intro {
+        width: 90%;
+        margin: auto;
+        margin-top: -4rem;
+    }
+    .intro-bio {
+        width: 95%;
+        font-size: 2rem;
+    }
+    .skills h1, .projects h1, .contact h1 {
+        padding-top: 1rem;
+    }
+    #headings {
+        font-size: 4rem;
+    }
+    .icons {
+        margin-bottom: 3.5rem;
+    }
+    .icons i {
+        width: 5rem;
+        height: 5rem;
+        font-size: 5rem;
+    }
+    .col h1 {
+        font-size: 2rem;
+    }
+    .projects, .contact {
+        margin-top: -4rem;
+        width: 70%;
+        margin: auto;
+    }
+    .proj-box h1 {
+        margin-top: 5rem;
+    }
+    .data, .txt-area {
+        width: 67%;
+    }
+    .btn {
+        margin: 3rem auto;
+        width: 41%;
+    }
+    .sendDiv {
+        width: 100%;
+    }
+    #sendBtn {
+        width: 67%;
     }
 }
 
@@ -530,39 +497,67 @@ input:-webkit-autofill:active {
         font-size: 16px;
     }
 
-    main {
-        width: 80%;
-        margin: 0 auto;
-        padding: 10rem 2rem;
-    }
-
-    .main-home img {
-        margin-top: -5rem;
+    .home {
+        height: 77%;
+        margin-top: 3rem;
+        width: 85%;
+        padding: 7rem 1rem;
     }
     .main-home h1 {
-        font-size: 3.5rem;
+        font-size: 5rem;
         font-weight: 500;
-        letter-spacing: 0.1rem;
     }
-    
     .main-home .wmu {
-        font-size: 2rem;
-    }    
+        font-size: 3rem;
+    }
+    .main-intro {
+        width: 90%;
+        margin: auto;
+        margin-top: -4rem;
+    }
     .intro-bio {
-        padding: .8rem .8rem;
-    }
-
-    .projects h1 {
-        padding-top: 2rem;
-    }
-    .row .contact-col {
-        width: 30rem;
-    }
-    .row .contact-col h1 {
+        width: 95%;
         font-size: 2rem;
     }
-    .main-row {
-        margin-bottom: -3rem;
+    .skills h1, .projects h1, .contact h1 {
+        padding-top: 1rem;
+        font-size: 2rem;
+    }
+    #headings {
+        font-size: 4rem;
+    }
+    .icons {
+        margin-bottom: 3.5rem;
+    }
+    .icons i {
+        width: 5rem;
+        height: 5rem;
+        font-size: 5rem;
+    }
+    .col h1 {
+        font-size: 2rem;
+    }
+    .projects, .contact {
+        margin-top: -4rem;
+    }
+    .proj-box h1 {
+        margin-top: 5rem;
+    }
+    .data, .txt-area {
+        width: 80%;
+    }
+    .btn {
+        margin: 3rem auto;
+        width: 50%;
+    }
+    .btn:hover{
+        background-color: #00abf0;
+    }
+    .sendDiv {
+        width: 80%;
+    }
+    #sendBtn {
+        width: 100%;
     }
 }
 
@@ -585,7 +580,6 @@ input:-webkit-autofill:active {
         margin: 0 auto;
         padding: 10rem 2rem;
     }
-
     .main-home img {
         margin-top: -5rem;
     }
@@ -640,102 +634,151 @@ input:-webkit-autofill:active {
     }
      .nav-link.hover, .nav-link.active {
         color:#00abf0;
-     }
-
-     .row .contact-col {
-        width: 33rem;
     }
-    .input-col {
-        width: 33rem;
-        position: relative;
+    .home {
+        height: 85%;
+        width: 90%;
+        padding: 7rem 1rem;
     }
-    .data, .txt-area {
-        max-width: 33rem;
-    }
-    .btn {
-        margin-top: 0.2rem;
-        width: 33rem;
-    }
-    .btn:hover: {
-        background-color: #00abf0;
-    }
-    .social-media a:hover {
-          background: transparent;
-    }
-     .footer .footer-social-media {
-        margin: 2rem auto 0 auto;
-    }
-}
-/* -----------for cell phones----------- */
-@media (max-width: 480px) {
-    main {
-        width: 100%;
-        margin: 0 auto;
-        padding: 10rem 2rem;
-    }
-    .logo {
-        width: 3rem;
-        height: 2.2rem;
-        margin: 2.1rem 0 0 3rem;
-    }
-    #menu-icon {
-        margin-right: 2.5rem;
-    }
-    .main-home {
+    .main-intro {
         width: 100%;
     }
-    .main-home img {
-        margin-top: -5rem;
+    .main-home .wmu {
+        margin-bottom: -3rem;
+    }
+    .about-me {
+        font-size: 3rem;
+        cursor: pointer;
+        border-radius: 1rem;
+        margin-bottom: 12rem;
     }
     .main-home h1 {
         font-size: 3.5rem;
         font-weight: 500;
-        letter-spacing: 0.1rem;
     }
     .main-home .wmu {
         font-size: 1.6rem;
     }
     .intro-bio {
-        width: 100%;
+        width: 95%;
     }
-    .projects h1 {
-        padding-top: 4rem;
+    .skills h1, .projects h1, .contact h1 {
+        padding-top: 1rem;
+        font-size: 3rem;
     }
- 
-    .row .contact-col {
-        max-width: 33rem;
-        min-width: 33rem;
+    #headings {
+        font-size: 4rem;
     }
-    .input-col {
-        width: 33rem;
-        position: relative;
+    .icons {
+        margin-bottom: 3.5rem;
+    }
+    .icons i {
+        width: 5rem;
+        height: 5rem;
+        font-size: 5rem;
+    }
+    .col h1 {
+        font-size: 2rem;
+    }
+    .projects, .contact {
+        margin-top: -4rem;
+    }
+    .proj-box h1 {
+        margin-top: 5rem;
     }
     .data, .txt-area {
-        max-width: 33rem;
+        width: 49%;
     }
     .btn {
-        margin-top: 0.2rem;
-        width: 33rem;
+        margin: 3rem auto;
+        width: 90%;
     }
-    .btn:hover: {
+    .btn:hover{
         background-color: #00abf0;
     }
-    .social-media a:hover {
-          background: transparent;
+    .sendDiv {
+        width: 48%;
     }
-    .main-row {
+    #sendBtn {
+        width: 100%;
+    }
+}
+
+@media (max-width: 540px) {
+    .data, .txt-area {
+        width: 71.2%;
+    }
+    .sendDiv {
+        width: 100%;
+    }
+    #sendBtn {
+        width: 71.2%;
+    }
+}
+/* -----------for cell phones----------- */
+@media (max-width: 480px) {
+    .home {
+        height: 85%;
+        width: 90%;
+        padding: 7rem 1rem;
+    }
+    .main-intro {
+        width: 100%;
+    }
+    .main-home .wmu {
         margin-bottom: -3rem;
     }
-
-    .data:hover, .txt-area:hover, .btn:hover {
-        transform: scale(1);
+    .about-me {
+        font-size: 3rem;
+        cursor: pointer;
+        border-radius: 1rem;
+        margin-bottom: 12rem;
     }
-
-    .footer {
-        margin-top: -2rem;
-        padding-bottom: 1rem;
+    .main-home h1 {
+        font-size: 3.5rem;
+        font-weight: 500;
     }
-    .footer .footer-social-media {
-        margin: 0 auto;
+    .main-home .wmu {
+        font-size: 1.6rem;
+    }
+    .intro-bio {
+        width: 95%;
+    }
+    .skills h1, .projects h1, .contact h1 {
+        padding-top: 1rem;
+        font-size: 3rem;
+    }
+    #headings {
+        font-size: 4rem;
+    }
+    .icons {
+        margin-bottom: 3.5rem;
+    }
+    .icons i {
+        width: 5rem;
+        height: 5rem;
+        font-size: 5rem;
+    }
+    .col h1 {
+        font-size: 2rem;
+    }
+    .projects, .contact {
+        margin-top: -4rem;
+    }
+    .data, .txt-area {
+        width: 100%;
+    }
+    .btn {
+        margin: 3rem auto;
+        width: 90%;
+    }
+    .btn:hover{
+        background-color: #00abf0;
+    }
+    .sendDiv {
+        width: 100%;
+    }
+    #sendBtn {
+        width: 100%;
     }
 }
