--- a/style.css
+++ b/style.css
@@ -645,11 +645,14 @@ input:-webkit-autofill:active {
     #menu-icon, #exit-icon {
         display: block;
     }
+    #exit-icon {
+        padding-top: 3rem;
+    }
     .nav-menu {
         position:fixed;
         width: 20rem;
         height: 25rem;
-        top: -5rem; 
+        top: -8rem; 
         right: 0rem;
         margin-right: 0rem;
         padding-top: 15rem;
@@ -662,7 +665,7 @@ input:-webkit-autofill:active {
     }
     @keyframes fadIn {
         from {opacity: 0;}
-        to {opacity: 1;}
+        to {opacity: 0.9;}
     }
     .nav-link {
         margin: 0px;
