--- a/style.css
+++ b/style.css
@@ -650,35 +650,22 @@ input:-webkit-autofill:active {
     }
     .nav-menu {
         position:fixed;
-        width: 20rem;
-        height: 25rem;
+        width: 100%;
+        height: 110%;
         top: -8rem; 
-        right: 0rem;
-        margin-right: 0rem;
+        left: 0rem;
         padding-top: 15rem;
         display: none;
-        z-index: 100;
-        border-bottom-left-radius: 5rem;
-        transition: all 1s ease-in-out;
-        animation: fadIn 1s ease forwards;
-        background: linear-gradient(to bottom, #000000,#060715, #260000);
-    }
-    @keyframes fadIn {
-        from {opacity: 0;}
-        to {opacity: 0.9;}
+        background-color:#081b29
     }
     .nav-link {
         margin: 0px;
         transition: transform 0.3s ease;
         display: block;
         padding: 2.5rem;
-        text-align: left;
+        text-align: center;
     }
-    .nav-links {
-        margin-top: -7rem;
-        width: 13rem;
-        border-right: 1px dashed white;
-    }
+  
     .nav-menu.active {
         display: block;
      }
